upgraded to Grails 2.3.5

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Jan 13 09:30:23 CET 2014
-app.grails.version=2.3.4
+#Tue Jan 21 11:08:40 CET 2014
+app.grails.version=2.3.5
 app.name=grails-showcase
+app.servlet.version=3.0
 app.version=0.1
